--- a/package.json
+++ b/package.json
@@ -31,10 +31,29 @@
     "typescript": "^4.2.4"
   },
   "devDependencies": {
+    "@types/autoprefixer": "^10.2.0",
+    "@types/axios": "^0.14.0",
+    "@types/babel-plugin-macros": "^2.8.4",
+    "@types/cheerio": "^0.22.28",
     "@types/jest": "^26.0.22",
+    "@types/next": "^9.0.0",
     "@types/node": "^14.14.41",
+    "@types/postcss-flexbugs-fixes": "^4.2.0",
+    "@types/postcss-import": "^12.0.0",
+    "@types/postcss-preset-env": "^6.7.2",
     "@types/react": "^17.0.3",
     "@types/react-dom": "^17.0.3",
+    "@types/react-icons": "^3.0.0",
+    "@types/react-is": "^17.0.0",
+    "@types/react-redux": "^7.1.16",
+    "@types/react-toastify": "^4.1.0",
+    "@types/redux": "^3.6.0",
+    "@types/redux-devtools-extension": "^2.13.2",
+    "@types/redux-persist": "^4.3.1",
+    "@types/redux-thunk": "^2.1.0",
+    "@types/styled-components": "^5.1.9",
+    "@types/tailwindcss": "^2.0.2",
+    "@types/typescript": "^2.0.0",
     "babel-plugin-macros": "^3.0.1",
     "babel-plugin-styled-components": "^1.12.0",
     "postcss-flexbugs-fixes": "^5.0.1",
